--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,11 +8,13 @@
     "start": "node src/index.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev --name init",
+    "prisma:push": "prisma db push",
     "prisma:seed": "node prisma/seed.js",
     "seed:demo": "node --experimental-fetch scripts/seed-demo.js"
   },
   "dependencies": {
     "@prisma/client": "5.19.1",
+    "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
